# DS_Project

./: .gitignore  CMakeLists.txt  Compress.cpp  Compress.h  Decompress.cpp  Decompress.h  Error_Detection.cpp  Error_detction.h  Error_detection.cpp  Error_detection_and_correction.cpp  Error_detection_and_correction.h  File.cpp  File.h  Graph.cpp  Graph.h  Network_Analysis.cpp  Network_Analysis.h  Node.h  Post.cpp  Post.h  README.md  USER.py  User.cpp  User.h  XML_PARSER.py  XML_Parser.cpp  XML_Parser.h  graph.dot  graph.py  huffman.cpp  huffman.h  json_minifier.cpp  main.cpp  project.cpp  sample.txt  sample2.txt  tree.cpp  xmlParser.cpp  xmlParser.h  xml_formatter.cpp  (+3 more)
ExeForProgram/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
ExeForProgram/.qt/: QtDeploySupport.cmake
ExeForProgram/.qtc_clangd/: compile_commands.json
ExeForProgram/GUI_autogen/: deps
ExeForProgram/GUI_autogen/EWIEGA46WW/: moc_graphwindow.cpp  moc_graphwindow.cpp.d  (+2 more)
ExeForProject/: graph.dot
GUI/: CMakeLists.txt  Network_Analysis.cpp  Network_Analysis.h  Node.cpp  graphwindow.cpp  graphwindow.h  graphwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  xmlParser.cpp  xmlParser.h
GUI/GUI/: CMakeLists.txt  File.cpp  File.h  GraphsWindow.ui  Network_Analysis.cpp  Network_Analysis.h  graphwindow.cpp  graphwindow.h  graphwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  xmlParser.cpp  xmlParser.h
GUI/build-GUI-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
(+78 files in other folders)
